// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test student reducer should add new student 1`] = `
Object {
  "chartToDisplay": null,
  "firstname": "",
  "lastname": "",
  "studentDropdown": false,
  "studentGraphId": null,
  "studentGraphName": null,
  "studentModal": false,
  "subjectDropdown": false,
  "subjectGraphName": null,
}
`;

exports[`test student reducer should display student graph 1`] = `
Object {
  "chartToDisplay": "student",
  "firstname": "",
  "lastname": "",
  "studentDropdown": true,
  "studentGraphId": "EySxHRVO4693O78I",
  "studentGraphName": "John Tester",
  "studentModal": false,
  "subjectDropdown": false,
  "subjectGraphName": null,
}
`;

exports[`test student reducer should display student's subject graph 1`] = `
Object {
  "chartToDisplay": "subject",
  "firstname": "",
  "lastname": "",
  "studentDropdown": false,
  "studentGraphId": null,
  "studentGraphName": null,
  "studentModal": false,
  "subjectDropdown": true,
  "subjectGraphId": "qPtCHoVmf2Tbznji",
  "subjectGraphName": "Biology",
}
`;

exports[`test student reducer should get all students 1`] = `
Object {
  "chartToDisplay": null,
  "firstname": "",
  "lastname": "",
  "studentDropdown": false,
  "studentGraphId": null,
  "studentGraphName": null,
  "studentModal": false,
  "students": Array [
    Object {
      "_id": "EySxHRVO4693O78I",
      "classroom": "Class 2",
      "createdAt": Object {
        "$$date": 1556364347040,
      },
      "firstname": "John",
      "gender": "male",
      "lastname": "Tester",
      "updatedAt": Object {
        "$$date": 1556515640626,
      },
    },
    Object {
      "_id": "zHDJF8nohVmf2Trurjh",
      "classroom": "Class 2",
      "createdAt": Object {
        "$$date": 1556364347040,
      },
      "firstname": "Jane",
      "gender": "female",
      "lastname": "Tester",
      "updatedAt": Object {
        "$$date": 1556515640626,
      },
    },
  ],
  "subjectDropdown": false,
  "subjectGraphName": null,
}
`;

exports[`test student reducer should get single student 1`] = `
Object {
  "chartToDisplay": null,
  "firstname": "",
  "lastname": "",
  "studentDropdown": false,
  "studentGraphId": null,
  "studentGraphName": null,
  "studentId": "EySxHRVO4693O78I",
  "studentModal": true,
  "subjectDropdown": false,
  "subjectGraphName": null,
}
`;

exports[`test student reducer should use default state 1`] = `
Object {
  "chartToDisplay": null,
  "firstname": "",
  "lastname": "",
  "studentDropdown": false,
  "studentGraphId": null,
  "studentGraphName": null,
  "studentModal": false,
  "subjectDropdown": false,
  "subjectGraphName": null,
}
`;
